Update BC-FIPS libraries to match Hub.
Add metricbeat.yml to repository and update Dockerfile to include in image.

Update fatjar-run.sh so that java command calls updated BC-FIPS libraries and matches Hub.

Update pom.xml so that ant run section calls updated BC-FIPS.